# RAG_AI_BOT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: MyData.md
src/: app.py  chat.py  embedding.py  load_data.py  vector_database.py
